Replace String.isBlank() usage for Java 8 compatibility
Switch map event blank-string validations from String#isBlank to trim().isEmpty() while preserving null checks to avoid NPEs. Removes Java 11 API usage for Java 8 builds.